[tool.poetry]
name = "nip"
version = "0.1.0"
description = "NeuroImaging Pipeline"
authors = ["SungHo Lee <shlee@unc.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
docker = "^6.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
